# voice-assistant-app

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: targets.example.env
deploy/systemd/: voice-assistant-pi5.service  voice-assistant-pizero2w.service
docs/: architecture.md  learning-design.md  protocol.md  raspberry-pi-development-workflow.md  roadmap.md
scripts/: audio-diagnostic.sh  setup-target-config.sh  start-pi5.sh  start-pizero2w.sh  start-target.sh  stop-target.sh  terminate-pi5.sh  terminate-pizero2w.sh
scripts/lib/: app.sh  audio.sh  common.sh  config.sh  deploy.sh  network.sh  service.sh  ssh.sh  tunnel.sh
src/voice_assistant/: __init__.py  __main__.py  config.py  main.py
src/voice_assistant/audio/: __init__.py  bridge.py  utils.py  vad.py
src/voice_assistant/core/: __init__.py  message.py  session.py
src/voice_assistant/openai_client/: __init__.py  realtime.py
src/voice_assistant/prompts/: __init__.py  base_system.md  loader.py  opening_greeting.md  teaching_method.md
src/voice_assistant/prompts/personas/: chef_coco_food.md  luna_bedtime.md  (+3 more)
src/voice_assistant/transport/: __init__.py  base.py  mock_transport.py  websocket_transport.py
src/voice_assistant/web/: __init__.py  app.py  server.py
tests/: test_audio_bridge.py  test_audio_gating.py  test_audio_utils.py  test_dashboard.py  test_main_startup.py  test_message.py  test_mock_transport.py  test_pipeline_integration.py  test_prompt_loader.py  test_realtime_client.py  test_session.py  test_target_config.py  test_vad.py  test_websocket_transport.py
(+1 files in other folders)
